# leidian

./: LICENSE  README.md  pyproject.toml
src/: __init__.py  executors.py  player.py  simple.py  utils.py
src/leidian/: __init__.py  api.py  executors.py  log.py  player.py
